<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>fr.guiguilechat</groupId>
	<artifactId>JCELechat</artifactId>
	<version>5.0.1</version>
	<licenses>
		<license>
			<name>GNU Lesser General Public License v3</name>
			<distribution>repo</distribution>
		</license>
	</licenses>

	<repositories>
		<repository>
			<id>kimsufi-stable</id>
			<url>http://91.121.120.36/maven/stable</url>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
		</repository>
		<repository>
			<id>kimsufi-snapshots</id>
			<url>http://91.121.120.36/maven/snapshot/</url>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
		</repository>
	</repositories>
	<distributionManagement>
		<repository>
			<id>kimsufi-repository</id>
			<url>ftp://91.121.120.36:12345/stable</url>
		</repository>
		<snapshotRepository>
			<id>kimsufi-snapshots</id>
			<url>ftp://91.121.120.36:12345/snapshot</url>
		</snapshotRepository>
	</distributionManagement>

	<properties>
		<java.version>10</java.version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.javadoc.skip>true</maven.javadoc.skip>
	</properties>
	<build>
		<plugins>
			<plugin>
				<artifactId>maven-source-plugin</artifactId>
				<version>2.4</version>
				<executions>
					<execution>
						<id>attach-sources</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-release-plugin</artifactId>
				<configuration>
					<autoVersionSubmodules>true</autoVersionSubmodules>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.7.0</version>
				<configuration>
					<release>${java.version}</release>
					<compilerArgs>
						<arg>--add-modules</arg>
						<arg>javafx.graphics,jdk.incubator.httpclient</arg>
					</compilerArgs>
				</configuration>
			</plugin>
		</plugins>
		<extensions>
			<!-- Enabling the use of FTP -->
			<extension>
				<groupId>org.apache.maven.wagon</groupId>
				<artifactId>wagon-ftp</artifactId>
				<version>1.0-beta-6</version>
			</extension>
		</extensions>
	</build>
	<dependencies>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>1.8.0-beta2</version>
		</dependency>
	</dependencies>
	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.testng</groupId>
				<artifactId>testng</artifactId>
				<version>6.14.3</version>
			</dependency>
			<dependency>
				<groupId>org.yaml</groupId>
				<artifactId>snakeyaml</artifactId>
				<version>1.21</version>
			</dependency>
			<dependency>
				<groupId>org.jsoup</groupId>
				<artifactId>jsoup</artifactId>
				<version>1.11.3</version>
			</dependency>
			<dependency>
				<groupId>com.fasterxml.jackson.core</groupId>
				<artifactId>jackson-databind</artifactId>
				<version>2.9.8</version>
			</dependency>
			<dependency>
				<groupId>org.jfree</groupId>
				<artifactId>jfreechart</artifactId>
				<version>1.5.0</version>
			</dependency>
			<dependency>
				<groupId>ch.qos.logback</groupId>
				<artifactId>logback-classic</artifactId>
				<version>1.3.0-alpha4</version>
			</dependency>
			<dependency>
				<groupId>org.slf4j</groupId>
				<artifactId>slf4j-simple</artifactId>
				<version>1.8.0-beta2</version>
			</dependency>
			<dependency>
				<groupId>fr.guiguilechat.jcelechat.model.esi</groupId>
				<artifactId>JCESI</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>fr.guiguilechat.jcelechat.model.sde</groupId>
				<artifactId>SDE-Full</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>com.helger</groupId>
				<artifactId>jcodemodel</artifactId>
				<version>3.0.3</version>
			</dependency>
		</dependencies>
	</dependencyManagement>
	<scm>
		<url>https://github.com/guiguilechat/JCELechat</url>
		<connection>scm:git:git@github.com-lechat:guiguilechat/JCELechat.git</connection>
		<developerConnection>scm:git:git@github.com-lechat:guiguilechat/JCELechat.git</developerConnection>
		<tag>HEAD</tag>
	</scm>
	<packaging>pom</packaging>
	<modules>
		<module>model</module>
		<module>programs</module>
	</modules>
</project>
